--- a/index.html
+++ b/index.html
@@ -2,29 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vanilla JS App</title>
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="refresh" content="0; url=public/index.html">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <div id="app">
-        <header>
-            <h1>Vanilla JS Application</h1>
-        </header>
-        <main>
-            <div id="player-setup-container"></div>
-            <div id="player-list-container"></div>
-            <button type="button" id="start-game-btn" disabled>Need 2 more players</button>
-        </main>
-    </div>
-    <script src="js/player-manager.js"></script>
-    <script src="js/ui-components.js"></script>
-    <script src="app.js"></script>
+    <p>Redirecting to <a href="public/index.html">new location</a>...</p>
     <script>
-        // Initialize player UI when DOM is loaded
-        document.addEventListener('DOMContentLoaded', () => {
-            initializePlayerUI();
-        });
+        // Fallback redirect if meta refresh fails
+        window.location.href = 'public/index.html';
     </script>
 </body>
 </html>
